# rust-node-cli

./: Cargo.toml  index.js  package-lock.json  package.json  readme.md  test.js
src/: lib.rs  main.rs
