[package]
name = "rust-node-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-test = "0.3.42"
